# erp-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
assets/attendance_html/: attendance_via_gps.html  attendance_via_image.html
assets/fonts/: font_utils.py
config/temporal/: development-sql.yaml
deployment/: Dockerfile  Dockerfile.temporal  deploy.yml  docker-compose.yml  gunicorn.conf.py  nginx.conf  setup.yml
docs/: STRUCTURE_RECOMMENDATIONS.md  TEMPORAL_EXTRACTION_IMPROVEMENTS.md
infrastructure/database/: database_config.py  database_connection.py
infrastructure/redis_connection/: redis.conf  redis_config.py  redis_manager.py
src/message_templates/: leave_application_notification_templates.py  message_response_templates.py
src/models/: __init__.py  application_and_approval_model.py  attendance_record_model.py  attendance_via_gps_model.py  attendance_via_image_model.py  card_summary_model.py  client_company_model.py  conversation_model.py  end_client_model.py  monthly_report_model.py  project_count_model.py  project_model.py  reminder_model.py  shift_config_model.py  shift_rule_model.py  user_model.py  worker_project_model.py
src/models_business_logic/: application_and_approval_helpers.py  attendance_record_helpers.py  nearby_project_helpers.py  shift_config_helpers.py
src/nlp_helpers/: advanced_temporal_extraction.py  enhanced_temporal_extraction.py  integrated_temporal_extraction.py  levenshtein_distance.py  llm_temporal_extraction.py  ml_temporal_extraction.py  (+2 more)
temporal_app/: __init__.py  client.py  config.py  create_monthly_report.py  worker.py
(+100 files in other folders)
