[tool.poetry]
name = "erp-assistant"
version = "0.1.0"
description = "WhatsApp-based workforce management chatbot for attendance tracking, leave applications, and payslip generation"
authors = ["memoryofayllwros <151952863+memoryofayllwros@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
uvicorn = ">=0.34.0,<0.35.0"
motor = ">=3.6.0,<4.0.0"
numpy = ">=2.2.1,<3.0.0"
gunicorn = ">=23.0.0,<24.0.0"
firebase-admin = "^6.6.0"
apscheduler = "^3.11.0"
websocket = "^0.2.1"
pymongo = "^4.11.3"
langchain = "^0.3.22"
langchain-openai = "^0.3.11"
twilio = "^9.5.1"
beanie = "^1.29.0"
fpdf = "^1.7.2"
pytz = "^2025.2"
python-dateutil = "^2.9.0.post0"
multidict = "^6.2.0"
levenshtein = "^0.27.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.4.0"
langgraph = "^0.3.31"
redis = "^5.2.1"
reportlab = "^4.4.1"
google-cloud-documentai = "^3.5.0"
pillow = "^11.2.1"
aiofiles = "^24.1.0"
openpyxl = "^3.1.5"
python-docx = "^1.2.0"
psutil = "^7.0.0"
# Temporal.io dependencies
temporalio = "^1.8.0"
protobuf = "^5.28.3"
grpcio = "^1.68.1"
pdfplumber = "^0.11.7"
pymupdf = "^1.26.3"
scipy = "^1.16.1"
googlemaps = "^4.10.0"
xlsxwriter = "^3.2.5"
ansible = "^11.9.0"
pandas = "^2.3.2"
docxtpl = "^0.20.1"
black = "^25.9.0"
isort = "^7.0.0"
holidays = "^0.83"
bcrypt = "^5.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
